доделал страницу "Члены комиссий"

--- a/CityDuma/App.config
+++ b/CityDuma/App.config
@@ -37,5 +37,6 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<connectionStrings><add name="City_DumaEntities" connectionString="data source=DESKTOP-SJF3D5P;initial catalog=City_Duma;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+<connectionStrings><add name="City_DumaEntities" connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=City_Duma;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/></connectionStrings></configuration>
+<!--<connectionStrings><add name="City_DumaEntities" connectionString="data source=DESKTOP-SJF3D5P;initial catalog=City_Duma;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>-->
 	
